[KBV-106] Return verifiable credential from KBV (#45)
* Clean up files and data that should no longer exist
* Add credential issuer to template and api files
* Fix up credential issuer files, plus move from package "address" to "kbv"
* Refactor VC to match RFC and fix tests
* Update to latest common-lib
* Update to latest common-lambdas
* Update to fix PR review comments
* Fix spotless formatting error
* Fix broken tests due to UUID change
